force-app/main/default/objects/ssot__HealthcareProviderFacilitySpecialty__dlm/fields/ssot__HealthcareSpecialty__c.field-meta.xml
<CustomField>
    <fullName>ssot__HealthcareSpecialty__c</fullName>
    <label>Healthcare Specialty</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>HealthcareSpecialty</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>