force-app/main/default/objects/ssot__HealthcareProviderFacilitySpecialty__dlm/fields/ssot__PractitionerFacilityId__c.field-meta.xml
<CustomField>
    <fullName>ssot__PractitionerFacilityId__c</fullName>
    <label>Practitioner Facility</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>PractitionerFacilityId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>