force-app/main/default/objects/ssot__HealthcareProviderFacilitySpecialty__dlm/fields/ssot__ProviderSpecialtyRole__c.field-meta.xml
<CustomField>
    <fullName>ssot__ProviderSpecialtyRole__c</fullName>
    <label>Provider Specialty Role</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ProviderSpecialtyRole</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>